--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,11 @@ body
 	background-color: rgb(246, 194, 68);
 }
 
-.bott
+
+
+.row 
 {
+	margin-right: 20px;
+	margin-left: 20px;
 	text-align: center;
 }
